configed for gulp-connect and test-skeleton

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="col-md-5">
-        <h1>Hello</h1>
+        <h1>Hello valaki</h1>
       </div>
       <div class="col-md-4">
         <h3>Valami</h3>
