--- a/client/html/index.html
+++ b/client/html/index.html
@@ -11,16 +11,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="col-md-5">
-        <h1>Hello valaki</h1>
-      </div>
-      <div class="col-md-4">
-        <h3>Valami</h3>
+      <div class="col-md-12" id="innerContainer">
+
       </div>
     </div>
-    <script type="text/javascript" src="../js/all.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/react.min.js"></script>
+    <script type="text/javascript" src="../jslib/react-with-addons.min.js"></script>
+    <script type="text/javascript" src="../js/all.min.js"></script>
   </body>
 </html>
