--- a/client/html/index.html
+++ b/client/html/index.html
@@ -15,10 +15,9 @@
 
       </div>
     </div>
-    <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
-    <script type="text/javascript" src="../jslib/react.min.js"></script>
-    <script type="text/javascript" src="../jslib/react-with-addons.min.js"></script>
+    <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
     <script type="text/javascript" src="../js/all.min.js"></script>
   </body>
 </html>
