font-awesome added, gulp modification for fonts

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/allscss.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../csslib/font-awesome.css">
   </head>
   <body>
     <div class="container">
