gulp versioning working on js, css files

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Best Movies</title>
-    <link rel="stylesheet" href="../css/allscss.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../css/allscss-1c348a9f9a.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/font-awesome.css">
@@ -19,6 +19,6 @@
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
-    <script type="text/javascript" src="/assets/"></script>
+    <script type="text/javascript" src="../js/all.min-887fbb3750.js"></script>
   </body>
 </html>
