Navbar basics for tablet view, react element and SASS

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/font-awesome.css">
-    <link rel="stylesheet" href="../css/allscss-1db184461c.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../css/allscss-2710fc035a.css" media="screen" charset="utf-8">
   </head>
   <body>
+    <div id="navBar">
+
+    </div>
     <div class="container">
       <div class="col-md-12" id="innerContainer">
 
@@ -19,6 +22,6 @@
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
-    <script type="text/javascript" src="../js/all.min-fdb9e840fa.js"></script>
+    <script type="text/javascript" src="../js/all.min-68c5ab5401.js"></script>
   </body>
 </html>
