--- a/client/html/index.html
+++ b/client/html/index.html
@@ -8,20 +8,30 @@
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/font-awesome.css">
-    <link rel="stylesheet" href="../css/allscss-1763cb5e05.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../css/allscss-45a0780581.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div id="navBar">
 
+    <!-- NAVBAR -->
+    <div id="navBar">
+    </div>
+
+    <div id="mobileNavBar">
+    </div>
+    <div id="mobileNavBarLinks">
+    </div>
+
+    <!-- CONTENT -->
     </div>
     <div class="container">
       <div class="col-md-12" id="innerContainer">
 
       </div>
     </div>
+
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
-    <script type="text/javascript" src="../js/all.min-aac1d5ddd4.js"></script>
+    <script type="text/javascript" src="../js/all.min-69e8da430b.js"></script>
   </body>
 </html>
