Firebase facebook authentication basics, facebook app id created

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
-    <script type="text/javascript" src="../js/all.min-83113954a3.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
+    <script type="text/javascript" src="../js/all.min-684084befd.js"></script>
   </body>
 </html>
