mobile-view login page basic SASS

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/font-awesome.css">
-    <link rel="stylesheet" href="../css/allscss-e79b4effd8.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../css/allscss-2e2bd93a62.css" media="screen" charset="utf-8">
   </head>
   <body>
+    <!-- LOGIN -->
+    <div id="loginContainer" class="col-lg-12 col-md-12 col-xs-12 vertical-center">
+
+    </div>
 
     <!-- NAVBAR -->
     <div id="navBar">
@@ -34,6 +38,6 @@
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.min.js"></script>
-    <script type="text/javascript" src="../js/all.min-55112672de.js"></script>
+    <script type="text/javascript" src="../js/all.min-dd707be457.js"></script>
   </body>
 </html>
