--- a/client/html/index.html
+++ b/client/html/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Best Movies</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/font-awesome.css">
-    <link rel="stylesheet" href="../css/allscss-ff673310cc.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../css/allscss-c2eb8aa1fb.css" media="screen" charset="utf-8">
   </head>
   <body>
     <!-- LOGIN -->
@@ -38,6 +39,6 @@
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.min.js"></script>
-    <script type="text/javascript" src="../js/all.min-de82dabe80.js"></script>
+    <script type="text/javascript" src="../js/all.min-282f94cce8.js"></script>
   </body>
 </html>
