--- a/client/html/index.html
+++ b/client/html/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/font-awesome.css">
-    <link rel="stylesheet" href="../css/allscss-a79fe1f7b1.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../css/allscss-0188b7c623.css" media="screen" charset="utf-8">
   </head>
   <body>
     <!-- LOGIN -->
@@ -38,7 +38,7 @@
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
     <script type="text/javascript" src="../jslib/firebase.js"></script>
-    <script type="text/javascript" src="../jslib/reactrouter.js"></script>
-    <script type="text/javascript" src="../js/all.min-7eac7d8fdd.js"></script>
+    <script type="text/javascript" src="../jslib/reactrouter.min.js"></script>
+    <script type="text/javascript" src="../js/all.min-80078ea206.js"></script>
   </body>
 </html>
