Reflux: discover page store, actions working, React is modified with reflux-actions

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
     <script type="text/javascript" src="../jslib/firebase.js"></script>
     <script type="text/javascript" src="../jslib/reactrouter.min.js"></script>
-    <script type="text/javascript" src="../js/all.min-df05b3f7a2.js"></script>
+    <script type="text/javascript" src="../jslib/reflux.min.js"></script>
+    <script type="text/javascript" src="../js/all.min-98e8d7267b.js"></script>
   </body>
 </html>
