--- a/client/html/index.html
+++ b/client/html/index.html
@@ -8,8 +8,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="../csslib/font-awesome.css">
-    <link rel="stylesheet" href="../css/allscss-19ba66b0d8.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../csslib/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/allscss-713692781e.css" media="screen" charset="utf-8">
   </head>
   <body>
     <!-- LOGIN -->
@@ -40,6 +40,6 @@
     <script type="text/javascript" src="../jslib/firebase.js"></script>
     <script type="text/javascript" src="../jslib/reactrouter.min.js"></script>
     <script type="text/javascript" src="../jslib/reflux.min.js"></script>
-    <script type="text/javascript" src="../js/all.min-0114641c13.js"></script>
+    <script type="text/javascript" src="../js/all.min-70a858bdd6.js"></script>
   </body>
 </html>
